concord_macros/tests/dsl/fail/fail_secret_in_route_atom.stderr
error: secret references are only allowed in credential declarations
  --> tests/dsl/fail/fail_secret_in_route_atom.rs:11:18
   |
11 |     path [secret.token]
   |                  ^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_secret_in_route_atom.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
